# ollama-langchain-guide

./: LICENSE  README.md  pyproject.toml
local_langchain_tutorial/src/: app.py
local_langchain_tutorial/tests/: test_invoke.py  test_phi_invoke.py  test_phi_langchain_stream.py  test_phi_stream.py  test_stream.py
ollama_langchain_guide/src/: app.py  systemprompt.txt
