[tool.poetry]
name = "ollama-langchain-guide"
version = "0.1.0"
description = "Develop LangChain using local LLMs with Ollama"
authors = ["Cutwell"]
license = "MIT"
readme = "README.md"
packages = [{include = "ollama_langchain_guide"}]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.8"
streamlit = "^1.31.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
ruff = "^0.2.2"
black = "^24.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
